# lendingclubscoringdbx

./: .gitignore  Makefile  README.md  prospector.yaml  pyproject.toml  requirements.txt  setup.py  unit-requirements.txt
.dbx/: project.json
.github/workflows/: onpush.yml  onrelease.yml
conf/: deployment.json  lendingclub_abtest_config.json  lendingclub_config.json  lendingclub_config_int_test.json
conf/test/: sample.json
lendingclub_scoring/: common.py  main_entrypoint.py
lendingclub_scoring/config/: ConfigProvider.py
lendingclub_scoring/data/: DataProvider.py
lendingclub_scoring/deploy/: __init__.py  deploy.py
lendingclub_scoring/jobs/: abtest_entrypoint.py  consumer_entrypoint.py  model_eval_entrypoint.py  train_entrypoint.py  webhook_entrypoint.py
lendingclub_scoring/pipelines/: LendingClubABTestPipeline.py  LendingClubConsumerPipeline.py  LendingClubModelEvaluationPipeline.py  LendingClubTrainingPipeline.py
lendingclub_scoring/webhooks/: __init__.py
notebooks/: monitoring.py  training_pipeline_test.py
scripts/: using_mlflow_tracking_remotely.py
tests/: entrypoint.py
tests/integration/: e2e_test.py  sample_test.py
tests/unit/: sample_test.py  train_test.py
tests/unit/data/: lendingclub.parquet
