[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lendingclub_scoring"
version = "0.0.1"
dependencies = [
    "mlflow",
    "boto3",
    "api_iam_helpers",
    "python-dotenv==0.10.3",
    "scikit-learn>=0.23.1",
    "databricks-registry-webhooks",
    "pytest",
    "pytest-cov",
    "pytest-datadir==1.3.0",
    "xgboost"
]

[project.optional-dependencies]
tests = [
    "dbx",
    "pyspark",
    "pyarrow",
    "pytest",
    "pytest-cov",
    "pytest-datadir==1.3.0",
    "prospector[with_mypy]",
    "black",
    "types-PyYAML"
]

[project.scripts]
train = "lendingclub_scoring.main_entrypoint:train"
eval = "lendingclub_scoring.main_entrypoint:eval"
consume = "lendingclub_scoring.main_entrypoint:consume"

[tool.setuptools.packages.find]
include = ["lendingclub_scoring*"]  # ["*"] by default
exclude = ["tests*"]  # empty by default
#namespaces = false  # true by default